# simplified_eye_hand_calibration

./: CMakeLists.txt  README.md
scripts/: re-index.sh  rename.sh
src/: eye_in_hand_calibration.cpp  eye_to_hand_calibration.cpp
